// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer should exclude specific files from results 1`] = `
"// BETTERER RESULTS V2.
exports[\`regexp no hack comments\`] = {
  value: \`{
    \\"src/exclude.ts:645618020\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645618020\\"]
    ],
    \\"src/index.ts:645618020\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645618020\\"]
    ]
  }\`
};
"
`;

exports[`betterer should exclude specific files from results 2`] = `
"// BETTERER RESULTS V2.
exports[\`regexp no hack comments\`] = {
  value: \`{
    \\"src/index.ts:645618020\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645618020\\"]
    ]
  }\`
};
"
`;

exports[`betterer should exclude specific files from results 3`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 

",
  "",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 

",
  "
1 test got checked. 🤔
1 test got checked for the first time! 🎉

",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 

",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer: 1 test done!
✅ regexp no hack comments: \\"regexp no hack comments\\" got better! 😍

",
  "
1 test got checked. 🤔
1 test got better! 😍

",
]
`;
